# books

Computer Graphics with OpenGL Fourth Edition/Capture_4/: CMakeLists.txt
Computer Graphics with OpenGL Fourth Edition/Capture_4/include/glad/: glad.h
Computer Graphics with OpenGL Fourth Edition/Capture_4/src/: glad.c  main.cpp
Fundamentals of Computer Graphics/: chapter_1.md  chapter_12.md  chapter_2.md
other/: undo_redo.md  undo_redo_ue4.md
other/code/undo_redo/: helper.py  main.py
software/pyqt/: QOpenGL.md
